# AccessiFight

./: README.md  accessifight.py  capture.py  config.py  describe.py  gui.py  hotkeys.py  pyproject.toml  tts.py
